Variety of style improvements

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
     <div id="maincard">
       <div id="cardtop">
-        <div class="imgdiv">
-          <img src="./res/Activities Fair 2018.png" />
+        <div id="cardtopimg">
+          <img src="./res/HomeBackground.png" />
         </div>
-        <div>
+        <div class="textdiv">
           <h1>Lambda Chi Alpha</h1>
-          <h2>Theta-Kappa Zeta</h2>
+          <!--<h2>Theta-Kappa Zeta</h2>-->
           <br />
           <h3>
             <p style="margin-top: .5em;">
