--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="textdiv">
           <h1>Lambda Chi Alpha</h1>
-          <!--<h2>Theta-Kappa Zeta</h2>-->
+          <h2>Theta-Kappa Zeta</h2>
           <br />
           <h3>
             <p style="margin-top: .5em;">
