--- a/history.html
+++ b/history.html
@@ -35,12 +35,12 @@
       <h1 class="name">
         Green Pride
       </h1>
-      <a class="link selected"
-         href=".">
+      <a class="link"
+         href="index.html">
         Home
       </a>
-      <a class="link"
-         href="history.html">
+      <a class="link selected"
+         href=".">
         History
       </a>
       <a class="link"
@@ -71,24 +71,34 @@
 
       <div id="rest">
         <h2>
-          Don't Pledge Us, Join Us!
+          International History
         </h2>
         <p>
-          Lambda Chi Alpha did away with the archaic pledge system and instituted the Associate Member program. Lambda Chi wanted to get away from the "pledge class." You do not join the Fraternity to just be with the other Associate Members. That is why we fully integrated the Associate Members with the Brothers. Brotherhood is learned through personal experience, one on one. The Associate Membership program is an orientation to fraternity life within Lambda Chi Alpha.
+          Lambda Chi Alpha International Fraternity is one of the largest men’s
+          general fraternities in North America. Founded in 1909 at Boston
+          University, it has more than 227,000 initiated members and has held
+          subsidiaries (called chapters) at more than 300 universities. Designed
+          to prepare its members to be leaders for the world in which they will
+          live, Lambda Chi Alpha has a mission to inspire the highest level of
+          character, values, scholarship, and service in each of its members. It
+          was the first fraternity to eliminate pledging and remains a leader in
+          the fight against hazing, alcohol abuse, and other challenges facing
+          today's college student. Lambda Chi Alpha serves to complement higher
+          education by providing opportunities for academic achievement,
+          leadership development, and lifelong friendships.
         </p>
 
         <h2>
-          Vision
+          Chapter History
         </h2>
         <p>
-          The vision of Lambda Chi Alpha Fraternity is to prepare and encourage collegiate men of good character, high ethics, and noble ideals to contribute positively to the world in which they live.
-        </p>
-
-        <h2>
-          Mission
-        </h2>
-        <p>
-          The mission of Lambda Chi Alpha is to offer the best fraternal experience, focusing on personal character development through leadership, scholarship, community service, and positive social experiences. The mission of Lambda Chi Alpha Fraternity staff is to provide the highest ethical and professional service to our undergraduate and alumni members in a spirit of unity and enthusiasm through the: Development of quality programs, publications, and services; Responsible use of Fraternity resources; Commitment to excellence in chapter standards; Advancement and promotion of the ideals and principles of the Fraternity as a complement to the educational experience.
+          Our chapter also has an intricate history.  We started in the late
+          19th century as the secret society PIES.  We were then incorporated
+          into the fraternity Theta Kappa Nu.  Through the great depression, our
+          fraternity fell upon hard times due to reduced growth and overall
+          membership.  One of our chapter's alumni suggested to Theta Kappa Nu
+          at large that we merge with Lambda Chi Alpha.  When the merge
+          succeeded, we were awarded the Theta-Kappa denomination.
         </p>
       </div>
     </div>
