Set history card top background to coat of arms

--- a/history.html
+++ b/history.html
@@ -51,8 +51,9 @@
 
     <div id="maincard">
       <div id="cardtop">
-        <div id="cardtopimg">
-          <img src="./res/HomeBackground.png" />
+        <div id="cardtopimg"
+             style="background-image: url(res/CoatOfArms.png); background-color: #52237F;">
+          <img src="./res/CoatOfArms.png" />
         </div>
         <div class="textdiv">
           <h1>Lambda Chi Alpha</h1>
