--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
     <div id="maincard">
       <div id="cardtop">
-        <div id="cardtopimg">
+        <div id="cardtopimg"
+             style="background-image: url(res/HomeBackground.png)">
           <img src="./res/HomeBackground.png" />
         </div>
         <div class="textdiv">
