--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 
-    <title>Home | Green Pride</title>
+    <title>Contact | Green Pride</title>
   </head>
 
   <body>
