--- a/index.html
+++ b/index.html
@@ -75,21 +75,39 @@
           Don't Pledge Us, Join Us!
         </h2>
         <p>
-          Lambda Chi Alpha did away with the archaic pledge system and instituted the Associate Member program. Lambda Chi wanted to get away from the "pledge class." You do not join the Fraternity to just be with the other Associate Members. That is why we fully integrated the Associate Members with the Brothers. Brotherhood is learned through personal experience, one on one. The Associate Membership program is an orientation to fraternity life within Lambda Chi Alpha.
+          Lambda Chi Alpha did away with the archaic pledge system and
+          instituted the Associate Member program. Lambda Chi wanted to get away
+          from the "pledge class." You do not join the Fraternity to just be
+          with the other Associate Members. That is why we fully integrated the
+          Associate Members with the Brothers. Brotherhood is learned through
+          personal experience, one on one. The Associate Membership program is
+          an orientation to fraternity life within Lambda Chi Alpha.
         </p>
 
         <h2>
           Vision
         </h2>
         <p>
-          The vision of Lambda Chi Alpha Fraternity is to prepare and encourage collegiate men of good character, high ethics, and noble ideals to contribute positively to the world in which they live.
+          The vision of Lambda Chi Alpha Fraternity is to prepare and encourage
+          collegiate men of good character, high ethics, and noble ideals to
+          contribute positively to the world in which they live.
         </p>
 
         <h2>
           Mission
         </h2>
         <p>
-          The mission of Lambda Chi Alpha is to offer the best fraternal experience, focusing on personal character development through leadership, scholarship, community service, and positive social experiences. The mission of Lambda Chi Alpha Fraternity staff is to provide the highest ethical and professional service to our undergraduate and alumni members in a spirit of unity and enthusiasm through the: Development of quality programs, publications, and services; Responsible use of Fraternity resources; Commitment to excellence in chapter standards; Advancement and promotion of the ideals and principles of the Fraternity as a complement to the educational experience.
+          The mission of Lambda Chi Alpha is to offer the best fraternal
+          experience, focusing on personal character development through
+          leadership, scholarship, community service, and positive social
+          experiences. The mission of Lambda Chi Alpha Fraternity staff is to
+          provide the highest ethical and professional service to our
+          undergraduate and alumni members in a spirit of unity and enthusiasm
+          through the: Development of quality programs, publications, and
+          services; Responsible use of Fraternity resources; Commitment to
+          excellence in chapter standards; Advancement and promotion of the
+          ideals and principles of the Fraternity as a complement to the
+          educational experience.
         </p>
       </div>
     </div>
