Add values page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
          href="contact.html">
         Contact
       </a>
+      <a class="link"
+         href="values.html">
+        Values
+      </a>
     </div>
 
     <div id="maincard">
