--- a/values.html
+++ b/values.html
@@ -27,7 +27,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 
-    <title>History | Green Pride</title>
+    <title>Values | Green Pride</title>
   </head>
 
   <body>
@@ -39,16 +39,16 @@
          href="index.html">
         Home
       </a>
-      <a class="link selected"
-         href=".">
+      <a class="link"
+         href="history.html">
         History
       </a>
       <a class="link"
          href="contact.html">
         Contact
       </a>
-      <a class="link"
-         href="values.html">
+      <a class="link selected"
+         href=".">
         Values
       </a>
     </div>
@@ -56,8 +56,8 @@
     <div id="maincard">
       <div id="cardtop">
         <div id="cardtopimg"
-             style="background-image: url(res/CoatOfArms.png); background-color: #52237F;">
-          <img src="./res/CoatOfArms.png" />
+             style="background-image: url(res/HomeBackground.png)">
+          <img src="./res/HomeBackground.png" />
         </div>
         <div class="textdiv">
           <h1>Lambda Chi Alpha</h1>
@@ -76,34 +76,36 @@
 
       <div id="rest">
         <h2>
-          International History
+          Mottos
         </h2>
+        <h3>
+          Χαλεπα Τα Καλα &mdash; Naught Without Labor
+        </h3>
         <p>
-          Lambda Chi Alpha International Fraternity is one of the largest men’s
-          general fraternities in North America. Founded in 1909 at Boston
-          University, it has more than 227,000 initiated members and has held
-          subsidiaries (called chapters) at more than 300 universities. Designed
-          to prepare its members to be leaders for the world in which they will
-          live, Lambda Chi Alpha has a mission to inspire the highest level of
-          character, values, scholarship, and service in each of its members. It
-          was the first fraternity to eliminate pledging and remains a leader in
-          the fight against hazing, alcohol abuse, and other challenges facing
-          today's college student. Lambda Chi Alpha serves to complement higher
-          education by providing opportunities for academic achievement,
-          leadership development, and lifelong friendships.
+          We believe that the only path to attainment is through hard work.
+          Thus the brothers of Lambda Chi Alpha devote themselves to improving
+          themselves, the brotherhood, and the community in which we reside.  We
+          truly believe in giving back to our community.  We volunteer for Meals
+          on Wheels, the American Legion, and Catholic Charities on a weekly
+          basis.  Every year we host a Christmas party for underprivileged
+          children in Terre Haute, providing them with gifts, food, and
+          entertainment.  We also participate in the North American food drive
+          and host a variety of other philanthropic events.  We have raised over
+          2000 pounds of food for Feeding America this year.  We believe in
+          bettering ourselves and our community through our service.
         </p>
 
-        <h2>
-          Chapter History
-        </h2>
+        <h3>
+          Vir Quisque Vir &mdash; Every Man a Man
+        </h3>
         <p>
-          Our chapter also has an intricate history.  We started in the late
-          19th century as the secret society PIES.  We were then incorporated
-          into the fraternity Theta Kappa Nu.  Through the great depression, our
-          fraternity fell upon hard times due to reduced growth and overall
-          membership.  One of our chapter's alumni suggested to Theta Kappa Nu
-          at large that we merge with Lambda Chi Alpha.  When the merge
-          succeeded, we were awarded the Theta-Kappa denomination.
+          Lambda Chi Alpha did away with the archaic pledge system and
+          instituted the Associate Member program. Lambda Chi wanted to get away
+          from the "pledge class." You do not join the Fraternity to just be
+          with the other Associate Members. That is why we fully integrated the
+          Associate Members with the Brothers. Brotherhood is learned through
+          personal experience, one on one. The Associate Membership program is
+          an orientation to fraternity life within Lambda Chi Alpha.
         </p>
       </div>
     </div>
