--- a/values.html
+++ b/values.html
@@ -65,7 +65,7 @@
           <br />
           <h3>
             <p style="margin-top: .5em;">
-              Don't Plege A Fraternity
+              Don't Pledge A Fraternity
             </p>
             <p style="margin-top: 0;">
               Join a Brotherhood
