Add LDRSHIP to values page

--- a/values.html
+++ b/values.html
@@ -107,6 +107,18 @@
           personal experience, one on one. The Associate Membership program is
           an orientation to fraternity life within Lambda Chi Alpha.
         </p>
+
+        <h2>
+          LDRSHIP
+        </h2>
+        <p>
+          Lambda Chi's seven core values fit into the acronym LDRSHIP.  They
+          stand for Loyalty, Duty, Respect, Service and Stewardship, Honor,
+          Integrity, and Personal Courage.  We will help you by providing the
+          experience and training to cultivate these attributes.  As a member of
+          Lambda Chi Alpha, there are many leadership opportunities available.
+          In addition, we
+        </p>
       </div>
     </div>
   </body>
