--- a/values.html
+++ b/values.html
@@ -56,8 +56,8 @@
     <div id="maincard">
       <div id="cardtop">
         <div id="cardtopimg"
-             style="background-image: url(res/HomeBackground.png)">
-          <img src="./res/HomeBackground.png" />
+             style="background-image: url(res/LambdaChiAlphaFlag.png)">
+          <img src="./res/LambdaChiAlphaFlag.png" />
         </div>
         <div class="textdiv">
           <h1>Lambda Chi Alpha</h1>
