Add chapter photo to top of contact page

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,26 @@
     </div>
 
     <div id="maincard">
+      <div id="cardtop">
+        <div id="cardtopimg"
+             style="background-image: url(res/ChapterPhoto.png)">
+          <img src="./res/ChapterPhoto.png" />
+        </div>
+        <div class="textdiv">
+          <h1>Lambda Chi Alpha</h1>
+          <h2>Theta-Kappa Zeta</h2>
+          <br />
+          <h3>
+            <p style="margin-top: .5em;">
+              Don't Pledge A Fraternity
+            </p>
+            <p style="margin-top: 0;">
+              Join a Brotherhood
+            </p>
+          </h3>
+        </div>
+      </div>
+
       <div id="rest">
         <h2>
           Contact
