--- a/history.html
+++ b/history.html
@@ -98,12 +98,16 @@
         </h2>
         <p>
           Our chapter also has an intricate history.  We started in the late
-          19th century as the secret society PIES.  We were then incorporated
+          19th century as the secret society PIES.  Then we were incorporated
           into the fraternity Theta Kappa Nu.  Through the great depression, our
           fraternity fell upon hard times due to reduced growth and overall
-          membership.  One of our chapter's alumni suggested to Theta Kappa Nu
-          at large that we merge with Lambda Chi Alpha.  When the merge
-          succeeded, we were awarded the Theta-Kappa denomination.
+          membership.  One of our chapter's alumni suggested that Theta Kappa Nu
+          at large merges with Lambda Chi Alpha.  When the merge succeeded, we
+          were awarded the Theta-Kappa denomination.  Since then we have
+          relocated to an on campus house, next to the Triangle house.  We take
+          great pride in our house and our brotherhood.  This drives our alumni
+          to come back and improve the house each year along with our active
+          brothers.
         </p>
       </div>
     </div>
