--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
         </h2>
         <p>
           Lambda Chi Alpha did away with the archaic pledge system and
-          instituted the Associate Member program. Lambda Chi wanted to get away
-          from the "pledge class." You do not join the Fraternity to just be
-          with the other Associate Members. That is why we fully integrated the
-          Associate Members with the Brothers. Brotherhood is learned through
-          personal experience, one on one. The Associate Membership program is
-          an orientation to fraternity life within Lambda Chi Alpha.
+          instituted the Associate Member program.  Lambda Chi wanted to get
+          away from the "pledge class." You do not join the Fraternity to just
+          be with the other Associate Members.  That is why we fully integrated
+          the Associate Members with the Brothers.  Brotherhood is learned
+          through personal experience, one on one.  The Associate Membership
+          program is an orientation to fraternity life within Lambda Chi Alpha.
         </p>
 
         <h2>
@@ -104,7 +104,7 @@
           The mission of Lambda Chi Alpha is to offer the best fraternal
           experience, focusing on personal character development through
           leadership, scholarship, community service, and positive social
-          experiences. The mission of Lambda Chi Alpha Fraternity staff is to
+          experiences.  The mission of Lambda Chi Alpha Fraternity staff is to
           provide the highest ethical and professional service to our
           undergraduate and alumni members in a spirit of unity and enthusiasm
           through the: Development of quality programs, publications, and
