--- a/values.html
+++ b/values.html
@@ -100,12 +100,12 @@
         </h3>
         <p>
           Lambda Chi Alpha did away with the archaic pledge system and
-          instituted the Associate Member program. Lambda Chi wanted to get away
-          from the "pledge class." You do not join the Fraternity to just be
-          with the other Associate Members. That is why we fully integrated the
-          Associate Members with the Brothers. Brotherhood is learned through
-          personal experience, one on one. The Associate Membership program is
-          an orientation to fraternity life within Lambda Chi Alpha.
+          instituted the Associate Member program.  Lambda Chi wanted to get
+          away from the "pledge class."  You do not join the Fraternity to just
+          be with the other Associate Members.  That is why we fully integrated
+          the Associate Members with the Brothers.  Brotherhood is learned
+          through personal experience, one on one.  The Associate Membership
+          program is an orientation to fraternity life within Lambda Chi Alpha.
         </p>
 
         <h2>
@@ -117,7 +117,8 @@
           Integrity, and Personal Courage.  We will help you by providing the
           experience and training to cultivate these attributes.  As a member of
           Lambda Chi Alpha, there are many leadership opportunities available.
-          In addition, we
+          In addition, we promote your involvement in our many service
+          opportunities as well as on campus activities.
         </p>
       </div>
     </div>
